cmake_minimum_required(VERSION 3.23)
set(CMAKE_INSTALL_PREFIX "${CMAKE_SOURCE_DIR}/build")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
project(CPP_PRACTICE_PROJ VERSION 1.0.0)
set(CMAKE_BUILD_TYPE DEBUG)
set(CXX_STANDARD 23)
set(C_STANDARD 23)
include_directories(I:/programme/environmen/Msys/ucrt64/include/c++/13.2.0)
link_directories(I:/programme/environment/Msys/ucrt64/lib)
#set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_HEADER_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/include)
add_subdirectory(Source)
set(source_file main.cpp)
add_executable(test main.cpp)
target_link_libraries(test PUBLIC reflect_data_lib my_tuple_lib)
target_include_directories(test PUBLIC ${CMAKE_BINARY_DIR}/include)