cmake_minimum_required(VERSION 3.25)
set(CMAKE_INSTALL_PREFIX "${CMAKE_SOURCE_DIR}/build")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
project(CPP_PRACTICE_PROJ VERSION 1.0.0)
set(CMAKE_BUILD_TYPE DEBUG)
set(CXX_STANDARD 23)
set(C_STANDARD 23)
set(CMAKE_PREFIX_PATH I:/programme/environment/Msys/clang64/lib/cmake/Qt6)
find_package(Qt6 REQUIRED  Core Gui Widgets)
include_directories(I:/programme/environment/Msys/clang64/include)
link_directories(I:/programme/environment/Msys/clang64/lib)
#set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_HEADER_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/include)
include("cmake/BuildHelper.cmake")
add_subdirectory(Source)
set(source_file main.cpp)
add_executable(test main.cpp)
target_link_libraries(test PUBLIC reflect_data_lib my_tuple_lib maybe_monad_lib Qt6::Core Qt6::Gui Qt6::Widgets)
target_include_directories(test PUBLIC ${CMAKE_BINARY_DIR}/include)